--- a/style.css
+++ b/style.css
@@ -39,3 +39,101 @@
   .navbar .navItem {
     text-decoration: none;
   }
+
+
+.header {
+    margin: 10px;
+    padding: 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background: white;
+  }
+  
+  .navItem {
+    margin: 0;
+    padding: 0;
+  }
+  
+  .header h2 {
+    color: #28352f;
+    font-style: normal;
+    font-family: "Inter", sans-serif;
+    font-size: 20px;
+    line-height: 28px;
+    font-weight: 600;
+    text-decoration: none;
+  }
+  
+  .header i {
+    color: #28352f;
+  }
+  
+  .header-text {
+    text-decoration: none;
+  }
+  
+  .header .navItem {
+    text-decoration: none;
+  }
+  
+
+.content-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-image: url("images/header-illsutration-mobile@2x.png");
+    background-size: cover;
+    background-repeat: repeat;
+    align-items: center;
+  }
+  
+  p {
+    text-align: center;
+    margin-left: 24px;
+    margin-right: 24px;
+    margin-top: 28px;
+    margin-bottom: 50px;
+    line-height: 28px;
+    font-size: 20px;
+    font-weight: 400;
+    font-style: normal;
+    font-family: "Inter", sans-serif;
+    color: #172b4d;
+  }
+  
+  h1 {
+    font-family: "Inter", sans-serif;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 40px;
+    line-height: 52px;
+    text-align: center;
+    color: #172b4d;
+    padding: 10px;
+    margin-right: 24px;
+    margin-left: 24px;
+    margin-top: 50px;
+  }
+  
+  .profession {
+    color: #36b37e;
+  }
+
+
+.socilaLinks {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    list-style: none;
+    margin-left: 102.42;
+    margin-right: 102.42;
+    height: 20px;
+    margin-bottom: 64px;
+  }
+  
+  .socilaLinks li {
+    margin: 10px;
+  }
