--- a/style.css
+++ b/style.css
@@ -672,3 +672,183 @@ h3 {
 .btn_effects:active {
   background: #008552;
 }
+
+.section-contact-form {
+  margin-left: auto;
+  margin-right: auto;
+  height: 879px;
+  width: 375px;
+  border-radius: 0;
+  padding: 64px 24px 64px 24px;
+  gap: 58px;
+  background-image: url("images/illustration-contact-form.png");
+  background-repeat: no-repeat;
+  background-position: right bottom;
+}
+
+.section-contact-form .div-heading-form {
+  height: 363px;
+  width: 327px;
+  border-radius: 0;
+  margin-bottom: 58px;
+  padding: 0;
+  gap: 24px;
+}
+
+.section-contact-form .div-heading-form .heading-form {
+  font-size: 40px;
+  font-weight: 700;
+  line-height: 52px;
+  letter-spacing: 0;
+  text-align: center;
+  color: #172b4d;
+}
+
+.section-contact-form div .contact-form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 330px;
+  width: 327px;
+  border-radius: 0;
+  padding: 0;
+  gap: 24px;
+}
+
+.section-contact-form div .contact-form div {
+  width: 327px;
+  border-radius: 0;
+  display: flex;
+  justify-content: center;
+}
+
+.section-contact-form div .contact-form div fieldset {
+  border: 0;
+}
+
+.section-contact-form div .contact-form div fieldset input[type="text"] {
+  height: 48px;
+  width: 327px;
+  border: 1px solid #d0d9d4;
+  border-radius: 4px;
+  font-size: 15px;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: 0;
+  text-align: left;
+  color: #6b778c;
+  padding: 15px 16px;
+}
+
+.section-contact-form div .contact-form div fieldset input[type="text"]:hover {
+  border: 1px solid #60c095;
+}
+
+.section-contact-form div .contact-form div fieldset input[type="text"]:focus {
+  outline: none;
+  border: 1px solid #60c095;
+}
+
+.section-contact-form div .contact-form div fieldset input[type="email"] {
+  height: 48px;
+  width: 327px;
+  border: 1px solid #d0d9d4;
+  border-radius: 4px;
+  font-size: 15px;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: 0;
+  text-align: left;
+  color: #6b778c;
+  padding: 15px 16px;
+}
+
+.section-contact-form div .contact-form div fieldset input[type="email"]:hover {
+  border: 1px solid #60c095;
+}
+
+.section-contact-form div .contact-form div fieldset input[type="email"]:focus {
+  outline: none;
+  border: 1px solid #60c095;
+}
+
+.section-contact-form div .contact-form div fieldset textarea {
+  height: 114px;
+  width: 327px;
+  border: 1px solid #d0d9d4;
+  border-radius: 4px;
+  font-size: 15px;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: 0;
+  text-align: left;
+  color: #6b778c;
+  padding: 15px 16px;
+}
+
+.section-contact-form div .contact-form div fieldset textarea:hover {
+  border: 1px solid #60c095;
+}
+
+.section-contact-form div .contact-form div fieldset textarea:focus {
+  outline: none;
+  border: 1px solid #60c095;
+}
+
+.btn-form {
+  padding: 12px;
+  gap: 10px;
+  width: auto;
+  height: auto;
+  bottom: 8px;
+  border-radius: 4px;
+  color: #fff;
+  background: #36b37f;
+  font-family: "Inter", sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 17px;
+  line-height: 24px;
+  text-align: center;
+  letter-spacing: 0.03em;
+  border: 0;
+}
+
+.section-contact-form .contact-form-icons {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  padding-top: 50px;
+  width: 326px;
+}
+
+.email-footer {
+  height: 189px;
+  width: 375px;
+  border-radius: nullpx;
+  margin-top: 34px;
+  margin-bottom: 115px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.email-footer .heading-footer {
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 32px;
+  letter-spacing: 0;
+  text-align: center;
+  color: #42526e;
+}
+
+.rounded {
+  border-top: 6px solid black;
+  margin-bottom: 5px;
+  border-radius: 5px;
+  width: 35%;
+}
+
+.divider {
+  display: flex;
+  justify-content: center;
+}
