--- a/style.css
+++ b/style.css
@@ -63,6 +63,7 @@ body {
 
 .header i {
   color: #28352f;
+  margin-left: 11rem;
 }
 
 .header-text {
@@ -146,7 +147,7 @@ h3 {
   align-items: center;
   padding: 4px 2px;
   gap: 24px;
-  width: fit-content;
+  width: 100%;
   margin: 0 auto;
 }
 
